--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Marvel information portal"
-    />
-    <title>Marvel information portal</title>
+    <meta name="description" content="Marvel"/>
+    <title>Marvel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
